[project]
name = "sek-fx-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Fredrik Broman", email = "fredrik.broman@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "black>=25.1.0",
    "mcp[cli]>=1.4.1",
    "ruff>=0.11.0",
]
