[project]
name = "sek-fx-mcp"
version = "0.1.0"
description = "Enables an LLM to look up the SEK (Swedish Krona) foreign exchange rates using MCP."
readme = "README.md"
license = "Apache-2.0"
authors = [{ name = "Fredrik Broman", email = "fredrik.broman@gmail.com" }]
requires-python = ">=3.12"
dependencies = ["mcp[cli]>=1.4.1"]

[project.optional-dependencies]
dev = ["black>=25.1.0", "ruff>=0.11.0"]
